[package]
name = "recovermov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
indicatif = "0.17.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
